Fix notification text from wrapping prematurely. Closes #331

--- a/styles/notifications.less
+++ b/styles/notifications.less
@@ -128,8 +128,9 @@ atom-notification {
             }
         }
         &:first-child:not(:only-child) {
-            .content > div {
-                padding-right: 12rem;
+            .content > div:first-child {
+                padding-top: 3rem;
+                padding-right: 2rem;
             }
         }
     }
